PR Comments + Fixed footer shadow overlap

--- a/src/stylesheets/footer.less
+++ b/src/stylesheets/footer.less
@@ -1,4 +1,5 @@
 #sk-footer {
+    position: relative;
     width: 100%;
     height: @footer-height;
     bottom: 0;
@@ -14,7 +15,7 @@
         border: 1px solid #e8e8e8;
         margin: 5px 9px;
         padding: 0 9px;
-        border-radius: 4px 4px 4px 4px;
+        border-radius: 4px;
         height: 33px;
         width: 75%;
         font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
